hphp/hack/test/typecheck/unassigned_tconst.php.exp
File "unassigned_tconst.php", line 4, characters 19-19:
A class member, method, type, trait usage, trait require, xhp attribute, xhp use, or xhp category is expected here. (Parsing[1002])
